--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
     <!-- Configuración API -->
     <script>
-        // CAMBIAR POR TU URL DE VERCEL AL DESPLEGAR
-        const API_BASE = "http://localhost:3000"; 
+        // URL DE VERCEL ACTUALIZADA
+        const API_BASE = "https://familia-guevara.vercel.app"; 
     </script>
 
     <!-- Navegación -->
